--- a/src/index.css
+++ b/src/index.css
@@ -6,10 +6,18 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+html,
+body,
+.weather-app {
+  height: 100%;
+  margin: 0;
+  padding: 0;
+}
 
 footer {
   text-align: center;
 }
+
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
